<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.StatiticsActivity">

    <LinearLayout
        style="@style/llTitle_style">
        <ImageView
            style="@style/ivTitle_style"
            android:id="@+id/ivTrolai"
            android:src="@drawable/back"/>
        <TextView
            style="@style/tvTitle_style"
            android:layout_weight="12"
            android:text="@string/thongKe"/>
        <ImageView
            android:layout_weight="1"
            android:id="@+id/ivMenu"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/menu_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginVertical="100dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:background="@drawable/custom_button"
            android:id="@+id/btnThongKe1"
            android:text="@string/thongKe1"
            android:layout_margin="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:background="@drawable/custom_button"
            android:id="@+id/btnThongKe2"
            android:text="@string/thongKe2"
            android:layout_margin="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</LinearLayout>