<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:paddingVertical="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textStyle="bold"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/maPhong"/>
        <TextView
            android:id="@+id/tvMaPhong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:paddingVertical="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textStyle="bold"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Tên thiết bị"/>
        <TextView
            android:id="@+id/tvTenTB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:paddingVertical="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textStyle="bold"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/loai"/>
        <TextView
            android:id="@+id/tvTenLoai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:paddingVertical="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textStyle="bold"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/soLuong"/>
        <TextView
            android:id="@+id/tvSoLuong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>