<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/ten"/>
                        <EditText
                            android:id="@+id/edtTenThietBi"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:layout_marginBottom="8dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/xuatXu"/>
                        <EditText
                            android:id="@+id/edtXuatXu"
                            android:layout_marginBottom="8dp"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/loai"/>
                        <Spinner
                            android:background="@drawable/spinner_custom"
                            android:id="@+id/spnTenLoai"
                            android:dropDownVerticalOffset="30dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </LinearLayout>

        </LinearLayout>
</LinearLayout>