<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/llItem_style">

    <LinearLayout style="@style/llInfo_style">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maPhong"
                android:textSize="15dp"
                android:textStyle="bold"
                android:textColor="#FF0000"/>
            <TextView
                android:id="@+id/tvMaphong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:textSize="20dp"
                android:textStyle="italic"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loai"
                android:textSize="15dp"
                android:textStyle="bold"
                android:textColor="#0037FD"/>
            <TextView
                android:id="@+id/tvLoaiphong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textStyle="italic"
                android:textSize="20dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tang"
                android:textSize="15dp"
                android:textStyle="bold"
                android:textColor="#015505"/>
            <TextView
                android:id="@+id/tvTang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:textStyle="italic"
                android:textSize="20dp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <include layout="@layout/layout_modify_delete"/>
    </LinearLayout>

</LinearLayout>